Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
4.6.2
-
None
Description
On Windows, a file on a smb share can be references using a file url like:
file://hostname/share-name/file-path/file.ext
QDesktopServices::openUrl() fails to open such a file due to a simple bug in QDesktopServices::openDocument().
For the above example QUrl gives a local filename of
"//hostname/share-name/file-path/file.ext"
which is basically correct but it seems that for remote files ShellExecute cannot cope with '//'.
If the path is converted using toNativeSeparators() before passing it to ShellExecute it just works.
Attachments
Issue Links
- is duplicated by
-
QTBUG-69584 Please reopen QTBUG-13359
-
- Closed
-
- relates to
-
QTBUG-32311 Strange behavior of QDesktopServices::openUrl
-
- Closed
-